# dream

./: .gitignore  README.md  package-lock.json  package.json
.playwright-cli/: page-2026-02-24T15-03-54-616Z.yml  page-2026-02-24T15-04-07-144Z.yml  page-2026-02-24T15-04-08-591Z.yml  page-2026-02-24T15-05-03-624Z.yml  page-2026-02-24T15-05-14-822Z.yml  page-2026-02-24T15-05-19-131Z.yml  page-2026-02-24T15-05-25-965Z.yml
backend/a2a-crew-ai-character-maker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/a2a-crew-ai-character-maker/app/: __init__.py  a2a_server.py  config.py  main.py  schemas.py
backend/a2a-crew-ai-character-maker/app/services/: __init__.py  replicate_service.py  vision_service.py
backend/a2a-crew-ai-character-maker/app/tools/: __init__.py
backend/a2a-crew-ai-character-maker/app/workflows/: character_creation.py
backend/a2a-crew-ai-character-maker/scripts/: deploy_azure.sh  deploy_azure_appservice.sh
backend/a2a-crew-ai-character-maker/tests/: test_workflow_decider.py
backend/a2a-maf-quiz-maker/: .dockerignore  .en  Dockerfile  README.md  requirements.txt
backend/a2a-maf-story-book-maker/: README.md  requirements.txt
backend/maf-story-book-maker/: .env.example  Dockerfile  README.md
backend/main/: .dockerignore  .env.example  Dockerfile  README.md  (+1 more)
backend/main-maf-chat/: .env.example  README.md  requirements.txt
mcp-exa/: README.md  SOURCES.md
output/: chat-search-exact.json
website/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
(+147 files in other folders)
